[package]
name = "axum-test-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum
axum = { version = "0.7.2", features = ["ws"] }
tokio = { version = "1.27.0", features = ["full"]}
tower-http = { version = "0.5.0", features = ["cors"] }
#hyper = "0.14"
#futures-util = "0.3"

# For test
reqwest = { version = "0.11", features = ["json"] }

#Serde .json
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"